rancher/tetris-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mmm-tetris-deployment
spec:

  replicas: 1

  selector:
    matchLabels:
      app: mmm-tetris-deployment

  template:
    metadata:
      labels:
        app: mmm-tetris-deployment
    spec:
      containers:
        - name: tetris-web
          image: docker-f1-snapshot-repo.idomsoft.hu/hackathon/macska-marcik:latest
          ports:
            - containerPort: 8088
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/data"
              name: my-csi-inline-vol
      volumes:
        - name: my-csi-inline-vol
          csi:
            driver: inline.storage.kubernetes.io
            volumeAttributes:
              foo: bar
      securityContext:
        fsGroup: 2000
        runAsUser: 2000
      imagePullSecrets:
        - name: regcred-repo
