rancher/tetris-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mmm-tetris-deployment
  labels:
    app: mmm-tetris-deployment
spec:
  selector:
    app: mmm-tetris-deployment
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
      name: http
