rancher/tetris-ingrees.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mmm-tetris-deployment
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /a/
            pathType: Prefix
            backend:
              service:
                name: mmm-tetris-deployment
                port:
                  number: 8098
